--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ header nav a{
     justify-content: center;
     background-size:cover;
     height: 100vh;
-    background-image: linear-gradient(180deg,#f0e9ec1b, rgba(233, 224, 224, 0.436)),url('/members/background-members.jpg');
+    background-image: linear-gradient(180deg,#f0e9ec1b, rgba(233, 224, 224, 0.436)),url('../members/background-members.jpg');
     display: grid;
     align-items: center;
     display: flex;
