--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ header nav a{
     justify-content: center;
     background-size:cover;
     height: 100vh;
-    background-image: url('members/backgroundmembers.jpg');
+    background-image: url('backgroundmembers.jpg');
     display: grid;
     align-items: center;
     display: flex;
