--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ header nav a{
     flex-direction: column;
     z-index: 999; 
     scale: 1;
+    
 }
+
 
 .tagLine h1{
     margin-top: 0;
@@ -72,6 +74,8 @@ header nav a{
     font-size: 50px;
     font-style: normal;
     z-index: -1;
+    transition: transform 0.1s ease-out;
+    
 }
 .tagLine button{ 
     
@@ -84,6 +88,7 @@ header nav a{
     background-color: yellow;
     color:rgb(94, 23, 161);
     z-index: -1;
+    
 }
 
 
@@ -91,7 +96,8 @@ header nav a{
     position: relative;
     padding: 100px;
     z-index: 999;
-    background:antiquewhite;
+    background: #a4193d;
+    color: #ffdfb9;
 
 }
 
@@ -99,18 +105,32 @@ header nav a{
     font-size: 100px;
 }
 
+.show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.left{
+    transform: translateX(-100px);
+}
+.right{
+    transform: translatex(100px);
+}
+
 .con-about{
     height: 70vh;
     display: flex;
     position: relative;
     justify-content: space-evenly; 
+    
 }
 
-.con-about .cont {
-    margin: 50px 100px;
+.cont {
+    padding-right: 100px;
     justify-content: center;
     align-items: center;
-    
+    transform: translateX(100px); /* default slide in from right */
+    transition: transform 1s ease-out, opacity 1s ease-out;
     
 }
 
@@ -280,15 +300,24 @@ header nav a{
     padding: 100px;
 }
 
+.navii{
+  
+}
+
 .performances ul{
     display: flex;
     gap: 20px;
     justify-content: center;
+    backdrop-filter: blur(30px);
+    box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
+    border: 2px solid rgba(255, 255, 255, 0);
+    
 }
 .performances li{
     list-style: none;
     font-size: 40px;
     font-style: italic;
+    
     
 }
 
@@ -446,4 +475,20 @@ header nav a{
     object-fit: cover;
     margin-bottom: 15px;
     border-radius: 6px;
+}
+
+
+
+
+.gform{
+    margin-top: 0;
+    padding: 0;
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gform iframe{
+    height: 50vh;
 }
