--- a/trial.css
+++ b/trial.css
@@ -1,9 +1,9 @@
-body {
+/*body {
     font-family: Arial, sans-serif;
     background-color: #f7f7f7;
     margin: 0;
     padding: 0;
-}
+}*/
 
 .container {
     max-width: 1200px;
@@ -136,3 +136,27 @@ body {
     border-radius: 6px;
 }
 
+
+.connt{
+    display: flex;
+}
+.content1 {
+    opacity: 0;
+    transform: translateX(100px); /* default slide in from right */
+    transition: transform 1s ease-out, opacity 1s ease-out;
+    max-width: 600px;
+    margin: 200px auto;
+    padding: 40px;
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .left {
+    transform: translateX(-100px); /* slide in from left */
+  }
+
+  .show {
+    opacity: 1;
+    transform: translateX(0);
+  }
