--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header nav a{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    overflow: hidden;
 }
 
 .tagLine{
@@ -183,7 +183,7 @@ header nav a{
     z-index: 999;
     justify-content: center;
     background-size:cover;
-    height: 100vh;
+    height: 120vh;
     background-image: url('backgroundmembers.jpg');
     align-items: center; 
 }
@@ -191,10 +191,11 @@ header nav a{
 .member-title{
     position: relative;
     justify-content: center;
-    display: grid;
     font-size: 2rem;
     align-items: center;
-    height: 400px;
+    height: 500px;
+    display: grid;
+
 }
 .member2 .member-title h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -211,19 +212,7 @@ header nav a{
 
 }
 
-.member-title h2{
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    display: flex;
-    font-family: sans-serif;
-    font-size: 35px;
-    font-weight: 900;
-    color: transparent;
-    top: -150px;
-    -webkit-text-stroke: 1px rgba(30, 17, 2, 0.975);
-    letter-spacing: 5px;
-}
+
 
 .profile{
     display: flex;
@@ -289,24 +278,30 @@ header nav a{
 
   .performances{
     position: relative;
-    z-index: 999;
+    z-index: 998;
     justify-content:center;
     background-size:cover;
     height: 100vh;
     background-color: rgba(13, 204, 204, 0.608);
-    display: grid;  
+    display: grid;
     text-align: center;
-    gap: 100px;
     padding: 100px;
 }
 
-.navii{
-  
+
+
+.navii li{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: large;
+    font-weight: 600;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .performances ul{
     display: flex;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
     backdrop-filter: blur(30px);
     box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
@@ -326,7 +321,7 @@ header nav a{
 }
 
 .performances img{
-    height: 550px;
+    height: 600px;
     width: 100%;
 }
 
