--- a/style.css
+++ b/style.css
@@ -274,55 +274,50 @@ header nav a{
     padding: 0;
 }
 
-
-
-  .performances{
-    position: relative;
-    z-index: 998;
-    justify-content:center;
-    background-size:cover;
-    height: 100vh;
-    background-color: rgba(13, 204, 204, 0.608);
+.Navi{
     display: grid;
-    text-align: center;
-    padding: 100px;
+    gap: 100px;
+    
 }
 
-
-
-.navii li{
+.performances{
+    background-color: rgba(92, 245, 243, 0.877);
+    display: grid;
+    overflow: hidden;
+    height: 90vh;
+    padding: 20px;
+    gap: 5em;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    font-size: large;
-    font-weight: 600;
-    font-family:Arial, Helvetica, sans-serif;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-.performances ul{
-    display: flex;
-    gap: 40px;
-    justify-content: center;
-    backdrop-filter: blur(30px);
-    box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
-    border: 2px solid rgba(255, 255, 255, 0);
-    
-}
 .performances li{
-    list-style: none;
-    font-size: 40px;
-    font-style: italic;
-    
-    
+    list-style-type: none;
+    font-family:'Courier New', Courier, monospace;
+    display: grid;
+    height: 70px;
+    font-weight: 600;
+    font-size: x-large;
+    font-style: oblique;
+    justify-items: center;
+    align-items: center;
+    padding: 10px;
 }
 
-.performances h1{
-    font-family: sans-serif;
+li:hover{
+    color: white;
 }
+
 
 .performances img{
     height: 600px;
-    width: 100%;
+    width: max-content;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
 }
 
 .p-details{
