--- a/style.css
+++ b/style.css
@@ -424,10 +424,7 @@ header nav a{
     align-items: center;
     justify-items: center;
     grid-template-columns: 1fr 1fr;
-    border: #000;
-    border-radius: 9px;
-    border-color: #000;
-    border-style: dashed;
+    
 }
 
 .performances li{
@@ -448,14 +445,7 @@ header nav a{
     color: white;
 }
 
-.Navi li{
-    background-color: #ffdfb9;
-    border: #000;
-    border-radius: 9px;
-    border-color: #000;
-    border-style: dashed;
-    
-}
+
 
 .taas h2{
     background-color: #ffdfb9;
@@ -467,10 +457,7 @@ header nav a{
     justify-content: center;
     align-items: center;
     justify-items: center;
-    border: #000;
-    border-radius: 9px;
-    border-color: #000;
-    border-style: dashed;
+    
 }
 
 .performances img{
@@ -808,10 +795,68 @@ header{
     font-weight: 600;
 }
 
+.performances{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 90dvh;
+}
 
+.Navi{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: auto auto;
+    margin: 0;
+    font-size: large;
+    justify-content:center;
+    align-items: center;
+}
+
+.Navi li{
+    display: flex;
+    height: 20px;
+    position: relative;
+    justify-content: left;
+    padding: 0;
+    margin: 0;
+    ;
+}
+
+.navii {
+    display: grid;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding-left: 0;
 
 }
 
+.perf img{
+    position: relative;
+    aspect-ratio: 16/9;
+    height: 85%;
+    justify-content: center;
+    align-items: center;
+}
+
+.perf{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin: 0;
+    padding: 0;
+}
+
+
+}
 
 
 /**992px laptops/desktop and 1200px for extra-large
