--- a/style.css
+++ b/style.css
@@ -100,29 +100,27 @@ header nav a{
     
 }
 
-
 .about{
-    height: 70vh;
+    height: 90dvh;
     z-index: 999;
     background: #a4193d;
     color: #ffdfb9;
     padding: min(5em, 8%);
     display: grid;
+    gap: 0;
     margin: 0;
 }
 
-
-
-
-
 .con {
-    height: 50vh;
+    height: 40vh;
     display: grid;
     position: relative;
-    justify-content: center;
+    justify-content: space-evenly;
     justify-items: center;
+    align-items: last baseline;
     padding: 0;
     margin: 0;
+    gap: 100px;
 }
 
 .about h1{
@@ -135,18 +133,17 @@ header nav a{
 .para ul{
     display: flex;
     height: 150px;
-    justify-content:space-around;
-    letter-spacing: 1px;
+    justify-content:space-evenly;
+    letter-spacing: 2px;
     list-style: none;
-    gap: 100px;
+    gap: 160px;
     padding: 0;  
 }
 
 .para li{
-    gap: 50px;
     width: fit-content;
     padding-bottom: 0;
-    
+    width: 590px;
 
 }
 
@@ -156,31 +153,17 @@ header nav a{
 }
 
 
-/*
-.vis { grid-area: una;}
-.mis { grid-area: pan;}
-.vismis { grid-area: ika;}
-
-.vision{
-    display: grid;
-    grid-template-areas: 
-    'una ika ika'
-    'una ika ika'
-    'pan ika ika'
-    'pan ika ika';
-    padding: 0;
-    margin: 0;
-    gap: 10px;
-}
-*/
-
 .vision{
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto;
     gap: 10px;
     letter-spacing: 1px;
-    margin-top: -150px;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    top: -50px;
 }
 
 .autoShow{
@@ -237,7 +220,7 @@ header nav a{
 
 .vismis{
     grid-row: 1 / span 2;
-    height: 300px;
+    height: max;
     margin: 0;
     padding: 10px;
 }
@@ -246,6 +229,11 @@ header nav a{
     text-align: left;
     width: 100%;
     letter-spacing: 2px;
+}
+
+.vismis li{
+    margin: 0 0 10px 0;
+    padding: 0;
 }
 
 
@@ -307,7 +295,13 @@ header nav a{
     text-align: center;
     color:#ffdfb9;
     text-shadow: 2px 2px 5px #fe98c8;
+}
 
+.conductor-profile h2{
+    position: relative;
+    bottom: 110px;
+    left: 120px;
+    color: rgba(255, 255, 255, 0.664);
 }
 
 .member2{
@@ -406,71 +400,157 @@ header nav a{
     padding: 0;
 }
 
-.Navi{
-    display: grid;
-    gap: 100px;
-    
-}
 
 .performances{
-    background-color: rgba(92, 245, 243, 0.877);
-    display: grid;
+    background-image: url('backgroundmembers.jpg');
+    display: flex;
     overflow: hidden;
-    height: 90vh;
-    padding: 20px;
-    gap: 5em;
+    flex-direction: column;
+    height: 100vh;
     text-align: center;
     justify-content: center;
     align-items: center;
     justify-items: center;
-    grid-template-columns: 1fr 1fr;
-    
+    gap: 50px;
+
 }
 
-.performances li{
+.Navi{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.Navi h1{
+    font-size: 60px;
+    position: relative;
+    letter-spacing: 1px;
+    color: #ffdfb9;
+}
+
+.navii{
+    display: flex;
+    gap: 90px;
+}
+.navii li{
     list-style-type: none;
     font-family:'Courier New', Courier, monospace;
-    display: grid;
-    height: 70px;
-    font-weight: 600;
-    font-size: x-large;
-    font-style: oblique;
-    justify-items: left;
-    align-items: center;
+    background-color:  #fe98c898;;
+    display: flex;
+    flex-direction: row;
     padding: 10px;
-
-}
-
-.performance li:hover{
-    color: white;
-}
-
-
-
-.taas h2{
-    background-color: #ffdfb9;
-}
-.taas{
-    display: grid;
-    gap: 20px;
-    height: 500px;
+    border-radius: 8px;
+    color: #ffdfb9;
+    font-weight: 800;
+    font-size: x-large;
+    height: 50px;
+    text-shadow: #000 2px 2px 10px;
+    width: 400px;
     justify-content: center;
     align-items: center;
-    justify-items: center;
-    
+    box-shadow: white 1px 2px 5px;
 }
 
-.performances img{
-    height: 400px;
-    width: 500px;
-    
+.navii li:hover{
+    color: white;
+    cursor: pointer;
+    background-color:#a4193d;
+    scale: 1.2;
+    transition: .4s;
+    box-shadow: none;
 }
+
+.bB{
+
+    margin: 0;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    height: calc(var(--height));
+    border: #000 solid 5px;
+    mask-image: linear-gradient(
+        to right,
+        transparent,
+        black 20% 60%,
+        transparent
+    );
+}
+
+.bB .list{
+    display: flex;
+    min-width: calc(var(--width) * var(--quantity));
+    position: relative;
+    align-items: center;
+}
+
+.bB .list .item{
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    left: 100%;
+    animation: autoRun 15s linear infinite;
+    animation-delay: calc((15s / var(--quantity)) *  (var(--position) - 1));
+}
+
+.bB .list .item img{
+    width: 100%;
+}
+
+@keyframes autoRun{
+    from{
+        left: 100%;
+    }to{
+        left: calc(var(--width) * -1);
+    }
+}
+
+.bB:hover .item{
+    animation-play-state: paused!important;
+}
+
+
+
 
 .perf{
     display: grid;
     justify-items: center;
     align-items: center;
 }
+
+.perf img{
+    height: 400px;
+    aspect-ratio: 16/12;
+    border-radius: 2%;
+}
+
+.taas{
+    display: flex;
+    position: relative;
+    margin: 10px;
+    width: 1200px;
+    gap: 100px;
+}
+
+.divide h2{
+    height: 100px;
+    color: #ffdfb9;
+    text-shadow: #000 2px 2px 5px;
+    font-size: xx-large;
+}
+
+.divide{
+    display: grid;
+    margin: auto;
+    text-align: justify;
+    padding: 20px;
+    background-color:#ffdfb93f;
+    border-radius: 2%;
+    color:#a4193d;
+    
+}
+
+
 
 .p-details{
     position: inherit;
@@ -638,12 +718,13 @@ header nav a{
 
 
 @media screen and (max-width: 600px) {
+
  body{
     max-width: 600px;
     padding: 0;
     margin: 0;
     position: relative;
-    overflow-x: hidden;
+    
     height: 50vh;
     padding-top: 10;
  }
@@ -653,7 +734,6 @@ header{
     overflow-x: hidden;
     height: 10%;
 
-    
 }
  .section1{
     display: grid;
@@ -661,7 +741,7 @@ header{
     align-items: center;
     height: 90vh;
     padding-top: 50px;
-    
+    overflow-x: hidden;
  }
 .tagLine h1{
     font-size: xx-large;
@@ -688,6 +768,7 @@ header{
     height: 90dvh;
     padding-bottom: 20px;
     gap: 5px;
+    overflow-x: hidden;
 }
 
 
@@ -763,6 +844,7 @@ header{
     padding: 0;
     justify-content: center;
     text-align: center;
+    overflow-x: hidden;
 }
 
 .conductor-profile h1{
@@ -805,6 +887,7 @@ header{
     align-items: center;
     align-content: center;
     height: 90dvh;
+    overflow: hidden;
 }
 
 .Navi{
@@ -825,7 +908,6 @@ header{
     justify-content: left;
     padding: 0;
     margin: 0;
-    ;
 }
 
 .navii {
@@ -838,13 +920,6 @@ header{
 
 }
 
-.perf img{
-    position: relative;
-    aspect-ratio: 16/9;
-    height: 85%;
-    justify-content: center;
-    align-items: center;
-}
 
 .perf{
     position: relative;
